# 1hr-bitcoin

./: .env.example  .gitignore  .pre-commit-config.yaml  KIMI_COMMAND_LABELS.md  README.md  kalshi_btc_cli_codex_build_spec.md  kalshi_btc_cli_github_issues.md  pyproject.toml
app/: __init__.py  cli.py  config.py  constants.py  logging.py  schemas.py
app/prompts/: news_impact_prompt.txt  news_impact_response_schema.json
app/services/: backtest.py  coinbase.py  explain.py  features.py  kalshi.py  kimiclaw.py  news.py  news_reviewers.py  predictor.py  storage.py  training.py
app/utils/: retries.py  text.py
tests/: test_backtest.py  test_cli.py  test_coinbase.py  test_explain.py  test_features.py  test_integration.py  test_kalshi.py  test_kimiclaw.py  test_news.py  test_news_reviewers.py  test_predictor.py  test_schemas.py  test_storage.py  test_training.py
tests/fixtures/coinbase/: candles.json  spot.json
tests/fixtures/kalshi/: live_markets.json
tests/fixtures/kimiclaw/: invalid_response.json  valid_response.json
tests/fixtures/news/: gdelt_articles.json  google_news_rss.xml
