[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "kalshi-btc-cli"
version = "0.1.0"
description = "Research-only CLI scaffold for the Kalshi BTC 1-hour predictor."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "aelasmar01", email = "elasmar.home@gmail.com" },
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5.0.0",
  "duckdb>=1.0.0,<2.0.0",
  "feedparser>=6.0.11,<7.0.0",
  "httpx>=0.27.0,<1.0.0",
  "numpy>=2.1.0,<3.0.0",
  "orjson>=3.10.7,<4.0.0",
  "pandas>=2.2.2,<3.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "rich>=13.7.1,<14.0.0",
  "scikit-learn>=1.5.1,<2.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "typer>=0.12.5,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1,<2.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=8.3.2,<9.0.0",
  "ruff>=0.6.2,<1.0.0",
]

[project.scripts]
btc-kalshi = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["app"]
strict = true
warn_unused_configs = true

